# AndroidNdk

./: Android Studio NDK开发流程.xmind  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wenping/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wenping/myapplication/: MainActivity.java
app/src/test/java/com/wenping/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
native_activity/: build.gradle
native_activity/src/androidTest/java/com/wenping/native_activity/: ExampleInstrumentedTest.java
native_activity/src/main/: AndroidManifest.xml
native_activity/src/main/cpp/: CMakeLists.txt  main.cpp
native_activity/src/main/res/values/: strings.xml
native_activity/src/test/java/com/wenping/native_activity/: ExampleUnitTest.java
test/: build.gradle
test/src/androidTest/java/com/wenping/test/: ExampleInstrumentedTest.java
test/src/main/: AndroidManifest.xml
test/src/main/cpp/: CMakeLists.txt  hello-jni.cpp
test/src/main/java/com/wenping/test/: MainActivity.java  Test.java
test/src/test/java/com/wenping/test/: ExampleUnitTest.java
